# pinocchio_inv_dyn

./: CMakeLists.txt  README.md
data/: hrp2_configs_coplanar
data/hyq_description/meshes/leg/: lowerlegreduced.dae
data/hyq_description/meshes/trunk/: trunk.dae
data/hyq_description/urdf/: hyq.urdf
python/pinocchio_inv_dyn/: abstract_solver.py  acc_bounds_util.py  acc_bounds_util_multi_dof.py  com_acc_LP.py  constraint_violations.py  convex_hull_util.py  derivative_filters.py  example.py  example_config.py  first_order_low_pass_filter.py  geom_utils.py  inv_dyn_formulation_util.py  min_jerk_traj_gen.py  multi_contact_stability_criterion_utils.py  plot_utils.py  polytope_conversion_utils.py  robot_wrapper.py  simulator.py  sot_utils.py  staggered_projections.py  standard_qp_solver.py  tasks.py  trajectories.py  transformations.py  viewer_utils.py
python/pinocchio_inv_dyn/examples/: example_hrp2.py  example_hrp2_config.py  example_hyq.py  example_hyq_config.py
python/pinocchio_inv_dyn/multi_contact/: com_acc_LP.py  com_acc_LP_3d.py  equilibrium_extremum_LP.py  robust_equilibrium_DLP.py  stability_criterion.py  utils.py
python/pinocchio_inv_dyn/multi_contact/bezier/: bezier_0_step_capturability.py
python/pinocchio_inv_dyn/multi_contact/bezier/test/: bezier_0_step_capturability_test.py
python/pinocchio_inv_dyn/optimization/: solver_LP_abstract.py  solver_LP_cvxopt.py  solver_LP_qpoases.py  solver_LP_scipy.py
